# holded-dataflow

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  bump_patch_version.sh  pyproject.toml  test.py  test_parse.py  test_parse_data.py
.github/workflows/: CI.yml
holded-dataflow/: filter.py  parse.py
holded_dataflow/: __init__.pyi  filter.py  parse.py
python/holded-dataflow/: __init__.py  parse.py
src/: blacklist.rs  filter.rs  lib.rs  parse.rs
tests/: test.py
